handling internal links

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -26,5 +26,5 @@ const story = data.story;
 ---
 
 <Layout currentLanguage={language} path={slug.join('/')}>
-	<StoryblokComponent blok={story.content} />
+	<StoryblokComponent currentLanguage={language} blok={story.content} />
 </Layout>
