--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -14,5 +14,5 @@ const story = data.story;
 ---
 
 <Layout currentLanguage="es" path="">
-	<StoryblokComponent blok={story.content} />
+	<StoryblokComponent currentLanguage="es" blok={story.content} />
 </Layout>
