--- a/src/storyblok/Button.astro
+++ b/src/storyblok/Button.astro
@@ -5,10 +5,9 @@ const { currentLanguage, blok } = Astro.props;
 
 let url;
 if (blok.link.linktype === 'story') {
-	url =
-		(currentLanguage ? `/${currentLanguage}/` : '') +
-		'/' +
-		(blok.link?.story?.full_slug === 'home' ? '' : blok.link?.story?.full_slug);
+	const slug = blok.link?.story?.full_slug;
+	url = currentLanguage ? `/${currentLanguage}/` : '/';
+	url += slug === 'home' ? '' : slug;
 } else if (blok.link.linktype === 'url') {
 	url = blok.link?.url;
 }
