--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 import { getLanguageCodes, getI18nStorySlug } from '../utils/i18n';
 const { currentLanguage, story } = Astro.props;
 const languages = await getLanguageCodes();
+const path = story.default_full_slug === 'home' ? '' : story.default_full_slug;
 ---
 
 <header>
@@ -10,10 +11,7 @@ const languages = await getLanguageCodes();
 		<summary>{currentLanguage || 'en'}</summary>
 		<ul>
 			<li>
-				<a
-					href={`/${story.default_full_slug}`}
-					class={!currentLanguage ? 'active' : ''}>en</a
-				>
+				<a href={`/${path}`} class={!currentLanguage ? 'active' : ''}>en</a>
 			</li>
 			{
 				languages.map((lang) => (
