correct link handling (without field-level languages for now)

--- a/src/storyblok/Button.astro
+++ b/src/storyblok/Button.astro
@@ -7,13 +7,20 @@ let url;
 //console.log('blok.link', blok.link);
 if (blok.link.linktype === 'story') {
 	let slug = blok.link?.story?.full_slug;
+	// only remove us/ as the eu/ slug should actually remain intact
 	if (slug.startsWith('us/')) {
 		slug = slug.slice(3);
 		console.log('us/ removed from slug');
 	}
 	console.log('slug', slug);
 	url = currentLanguage ? `/${currentLanguage}/` : '/';
-	url += slug === 'home' ? '' : slug;
+	if (slug === 'home') {
+		url += '';
+	} else if (slug === 'eu/home') {
+		url += 'eu';
+	} else {
+		url += slug;
+	}
 } else if (blok.link.linktype === 'url') {
 	url = blok.link?.url;
 }
