--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 const currentYear = new Date().getFullYear();
-const { currentLanguage, story } = Astro.props;
+const { currentLanguage, currentRegion, story } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,7 +16,11 @@ const { currentLanguage, story } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 	</head>
 	<body>
-		<Header currentLanguage={currentLanguage} story={story} />
+		<Header
+			currentLanguage={currentLanguage}
+			currentRegion={currentRegion}
+			story={story}
+		/>
 		<slot />
 		<footer>All rights reserved © {currentYear}</footer>
 	</body>
