--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Header from '../components/Header.astro';
-import AltenateLinks from '../components/AlternateLinks.astro';
+import AlternateLinks from '../components/AlternateLinks.astro';
 const currentYear = new Date().getFullYear();
 const { currentLanguage, story } = Astro.props;
 ---
@@ -14,7 +14,7 @@ const { currentLanguage, story } = Astro.props;
 		<link rel="stylesheet" href="/styles/global.css" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-		<AltenateLinks currentLanguage={currentLanguage} story={story} />
+		<AlternateLinks currentLanguage={currentLanguage} story={story} />
 		<meta name="generator" content={Astro.generator} />
 	</head>
 	<body>
