--- a/src/storyblok/Button.astro
+++ b/src/storyblok/Button.astro
@@ -1,12 +1,12 @@
 ---
 import { storyblokEditable } from '@storyblok/astro';
-import { getLink } from '../utils/i18n';
+import { getInternalLink } from '../utils/i18n';
 
-const { currentLanguage, blok } = Astro.props;
+const { blok } = Astro.props;
 
 let url = '';
 if (blok.link.linktype === 'story') {
-	url = await getLink(blok.link?.story?.full_slug, currentLanguage);
+	url = await getInternalLink(blok.link?.story?.full_slug);
 } else if (blok.link.linktype === 'url') {
 	url = blok.link?.url;
 }
