--- a/src/pages/eu/[...slug].astro
+++ b/src/pages/eu/[...slug].astro
@@ -3,7 +3,7 @@ import { useStoryblokApi } from '@storyblok/astro';
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro';
 import Layout from '../../layouts/Layout.astro';
 import { getLanguageCodes } from '../../utils/i18n';
-import { getStoryblokPaths } from '../../utils/paths';
+import { getStoryblokPaths } from '../../utils/ssr';
 
 export async function getStaticPaths() {
 	return await getStoryblokPaths('eu');
