--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ const languages = getAvailableLanguagesForRegion(currentRegion); // just get lan
 const storyFullSlug = story.default_full_slug || story.full_slug;
 let baseSlug = '';
 const homeSlugs = regions.map((region) => `${region}/home`);
+
 if (!homeSlugs.includes(storyFullSlug)) {
 	const slugData = await getCleanSlug(storyFullSlug);
 	baseSlug = slugData.slug;
@@ -34,7 +35,7 @@ const additionalLanguageLinks = await Promise.all(
 	languages.map(async (lang) => {
 		const translatedSlug = await getTranslatedSlug(story, lang);
 		const fullSlug = translatedSlug
-			? `${includeCurrentRegion}${lang}/${translatedSlug}`
+			? `${includeCurrentRegion}${lang}/${translatedSlug === 'home' ? '' : translatedSlug}`
 			: `${includeCurrentRegion}${lang}/${baseSlug}`;
 
 		return {
